<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OlinJa</string>
    <string name="action_settings">Settings</string>

    <string name="all_session_list">All Ninja Sessions</string>

    <string name="session_example_title">Diagnostic II</string>
    <string name="session_example_ninja">ModCon Bear</string>
    <string name="session_example_place">WH2AL</string>
    <string name="session_example_time">Happening now! Until 10:00 PM</string>

    <string name="dialog_title">Creating a Session</string>
    <string name="dialog_input_assignment">Assignment</string>
    <string name="dialog_hint_assignment">Input assignment name</string>
    <string name="dialog_input_place">Place</string>
    <string name="dialog_hint_place">Input a place.</string>
    <string name="dialog_input_date">Date</string>
    <string name="dialog_hint_date">Pick a Date.</string>
    <string name="dialog_input_time">Time</string>
    <string name="dialog_hint_time">Pick a Time.</string>
    <string name="dialog_input_duration">Duration</string>
    <string name="dialog_hint_duration">How many hours?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_edit">Edit</string>

    <string name="session_title_checkoff">Check me off!</string>
    <string name="session_title_helpMe">I need help!</string>
    <string name="add_queue">+Q</string>

    <string name="checked_off_people">People Who Have Been Checked Off:</string>
    <string name="login_title">Login</string>
    <string name="login">Name:</string>
    <string name="login_hint">Type in Actual Name</string>
    <string name="student">Student</string>
    <string name="login_ninja">Ninja</string>
    <string name="button_text">I am a:</string>
    <string name="check_off">Check off</string>

    <string name="signin_main">Network Credentials</string>
    <string name="signin_user">Windows Login</string>
    <string name="signin_pass">Password</string>

    <string name="notify">Notify</string>
    <string name="checkoff">Check Off</string>
    <string name="remove">Remove</string>
</resources>
