<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id = "@+id/session_title"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text="@string/session_example_title"
        android:textSize="@dimen/session_font"
        />

    <TextView
        android:id = "@+id/session_ninja"
        android:layout_below = "@id/session_title"
        android:layout_marginLeft = "@dimen/session_ninja_left"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/session_example_ninja"
        android:textSize = "@dimen/session_sub_font"/>

    <TextView
        android:id = "@+id/session_time"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/session_ninja"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/session_example_time"
        android:textSize = "@dimen/session_sub_font"
        />

    <TextView
        android:id = "@+id/session_place"
        android:layout_alignParentRight="true"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/session_example_place"
        android:textSize = "@dimen/session_sub_font"
        />
</RelativeLayout>