<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:layout_marginLeft = "7dp"
        android:layout_marginTop = "8dp"
        android:layout_height = "@dimen/profile_size_buffer"
        android:layout_width = "46dp"
        android:background = "@color/olin_silver"
        android:layout_alignParentLeft="true"
        />
    <ImageView
        android:id="@+id/user_profile"
        android:layout_marginLeft = "5dp"
        android:layout_height = "@dimen/profile_size"
        android:layout_width = "@dimen/profile_size"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/signin_user"
        android:layout_marginRight = "@dimen/session_title_padding"
        android:layout_marginTop = "@dimen/session_title_padding"
        android:layout_marginBottom = "@dimen/session_title_padding"
        />

    <TextView
        android:id = "@+id/person_name"
        android:layout_toRightOf="@id/user_profile"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_margin = "5dp"
        android:text="@string/session_example_title"
        android:textSize="@dimen/session_font"
        />

    <ImageView
        android:id = "@+id/help_button"
        android:layout_marginRight = "10dp"
        android:background = "@drawable/green_help"
        android:layout_marginLeft = "10dp"
        android:layout_alignParentRight="true"
        android:layout_below = "@id/person_name"
        android:layout_width = "@dimen/help_button_size"
        android:layout_height = "@dimen/help_button_size"
        />
    <TextView
        android:id = "@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft = "@id/person_name"
        android:layout_alignParentBottom="true"
        android:textSize = "@dimen/session_sub_font"
        android:text = "@string/dialog_title"/>
</RelativeLayout>
